# native_opencv_with_flutter

./: .metadata  pubspec.yaml
android/: build.gradle
example/: pubspec.yaml
example/android/app/: build.gradle
example/lib/: main.dart
ios/: native_add.podspec
ios/Classes/: native_add.cpp
lib/: native_add.dart  native_add_bindings_generated.dart
src/: CMakeLists.txt  native_add.cpp  native_add.h
